--- a/index.html
+++ b/index.html
@@ -145,27 +145,25 @@
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/kshitijyad/CreditAnalysis/blob/master/Credit_Analysis.ipynb" class="portfolio-box" >
-                            <img src="/img/cola.png" class="img-responsive" alt="">
+                            <img src="/img/portfolio/1.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
-                                      Internet of things
+                                      Machine Learning
                                   </div>
                                     <div class="project-name">
-                                        Hydrobase
+                                        Credit Analysis
                                     </div>
                                 </div>
                             </div>
                         </a>
                         <h3 style="text-align: center">Product Manager</h3></br>
-                        <p class="text-muted" style="font-size: small"> A control system and an analytics engine to help plants grow</p>
-                        <!--b class="text-muted">Accepted Poster at IEEE Viz Conference 2015!</b-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="jeopardy.html" class="portfolio-box">
-                            <img src="img/jeopardy.png" class="img-responsive" alt="">
+                            <img src=""/img/portfolio/2.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
@@ -185,7 +183,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="nyce.html" class="portfolio-box">
-                            <img src="img/NYCe.png" class="img-responsive" alt="">
+                            <img src=""/img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -225,7 +223,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="travelbites.html" class="portfolio-box">
-                            <img src="img/travelbites.png"  class="img-responsive" alt="">
+                            <img src=""/img/portfolio/4.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -245,7 +243,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="anlp.html" class="portfolio-box">
-                            <img src="img/anlp.png"  class="img-responsive" alt="">
+                            <img src=""/img/portfolio/5.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
@@ -265,7 +263,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="cookcounty.html" class="portfolio-box">
-                            <img src="img/cookcounty.png"  class="img-responsive" alt="">
+                            <img src=""/img/portfolio/6.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
