--- a/index.html
+++ b/index.html
@@ -186,20 +186,20 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/ElectionTweet2016/blob/master/ElectionTweet.ipynb" class="portfolio-box">
+                        <a href="https://github.com/kshitijyad/TimeSeriesAnalysis/blob/master/Time-SeriesAnalysis.ipynb" class="portfolio-box">
                             <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
-                                        Sentimental Analysis
+                                        Time Series Analysis
                                     </div>
                                     <div class="project-name">
-                                        Twitter Tweet Analysis
+                                        Time Series Analysis (ARIMA and RNN)
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Twitter Tweet Analysis</h3></br>
+                        <h3 style="text-align: center">TTime Series Analysis</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
