--- a/index.html
+++ b/index.html
@@ -150,20 +150,20 @@
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/KaggleDataSurveyAnalysis/blob/master/KaggleSurvey.ipynb" class="portfolio-box">
+                        <a href="https://github.com/kshitijyad/RiskProfilingandAnalysis/blob/master/RiskProfilingandAnalysis-Insurance.ipynb" class="portfolio-box">
                             <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
-                                      Data Exploration
+                                      Risk Analysis
                                   </div>
                                     <div class="project-name">
-                                        Kaggle Survey Analysis
+                                        Risk and Severity Prediction
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Kaggle Survey Analysis</h3></br>
+                        <h3 style="text-align: center">Risk and Severity Prediction</h3></br>
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
