--- a/index.html
+++ b/index.html
@@ -184,24 +184,7 @@
                         <h3 style="text-align: center">Mass Shooting</h3></br>
                     </div>
                 </div>
-                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
-                    <div style="width :95%">
-                        <a href="https://github.com/kshitijyad/TimeSeriesAnalysis/blob/master/Time-SeriesAnalysis.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
-                            <div class="portfolio-box-caption">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-category text-faded">
-                                        Time Series Analysis
-                                    </div>
-                                    <div class="project-name">
-                                        Time Series Analysis (ARIMA and RNN)
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <h3 style="text-align: center">Time Series Analysis</h3></br>
-                    </div>
-                </div>
+                
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/kshitijyad/IRIS_Data_Analysis/blob/master/IRIS.ipynb" class="portfolio-box">
@@ -220,6 +203,26 @@
                         <h3 style="text-align: center">IRIS Dataset</h3></br>
                     </div>
                 </div>
+                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/kshitijyad/IMDB_Tensor_Flow/blob/master/IMDB_Movie_Rating.ipynb" class="portfolio-box">
+                            <img src="img/portfolio/6.jpg"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Tensor Flow
+                                    </div>
+                                    <div class="project-name">
+                                        IMDB Rating Prediction
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">Tensor Flow</h3></br>
+                    </div>
+                </div>
+            </div>
+        </div>
                 
     </section>
 
