--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
                     <div style="width :95%">
                         <a href="https://github.com/kshitijyad/RiskProfilingandAnalysis/blob/master/RiskProfilingandAnalysis-Insurance.ipynb" class="portfolio-box">
-                            <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
@@ -184,63 +184,63 @@
                         <h3 style="text-align: center">Mass Shooting</h3></br>
                     </div>
                 </div>
-              <div class="container-fluid">
-              <div class="row no-gutter">
-                  <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
-                      <div style="width :95%">
-                          <a href="https://github.com/kshitijyad/CreditAnalysis/blob/master/Credit_Analysis.ipynb" class="portfolio-box" >
-                              <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
-                              <div class="portfolio-box-caption">
-                                  <div class="portfolio-box-caption-content">
+    
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/kshitijyad/IRIS_Data_Analysis/blob/master/IRIS.ipynb" class="portfolio-box">
+                            <img src="img/portfolio/5.jpg"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
                                     <div class="project-category text-faded">
                                         Machine Learning
                                     </div>
-                                      <div class="project-name">
-                                          Credit Analysis
-                                      </div>
-                                  </div>
-                              </div>
-                          </a>
-                          <h3 style="text-align: center">Credit Analysis</h3></br>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-lg-offset-1 col-sm-4">
-                      <div style="width :95%">
-                          <a href="https://github.com/kshitijyad/RiskProfilingandAnalysis/blob/master/RiskProfilingandAnalysis-Insurance.ipynb" class="portfolio-box">
-                              <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                              <div class="portfolio-box-caption">
-                                  <div class="portfolio-box-caption-content">
-                                    <div class="project-category text-faded">
-                                        Risk Analysis
+                                    <div class="project-name">
+                                        IRIS Dataset
                                     </div>
-                                      <div class="project-name">
-                                          Risk and Severity 
-                                      </div>
-                                  </div>
-                              </div>
-                          </a>
-                          <h3 style="text-align: center">Risk and Severity </h3></br>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-lg-offset-1 col-sm-4">
-                      <div style="width :95%">
-                          <a href="https://github.com/kshitijyad/USAMassShooting/blob/master/MassShooting.ipynb" class="portfolio-box">
-                              <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                              <div class="portfolio-box-caption">
-                                  <div class="portfolio-box-caption-content">
-                                      <div class="project-category text-faded">
-                                          Data Mining and Analytics
-                                      </div>
-                                      <div class="project-name">
-                                          Mass Shooting
-                                      </div>
-                                  </div>
-                              </div>
-                          </a>
-                          <h3 style="text-align: center">Mass Shooting</h3></br>
-                      </div>
-                  </div>
-
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">IRIS Dataset</h3></br>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/kshitijyad/TimeSeriesAnalysis/blob/master/Time-SeriesAnalysis.ipynb" class="portfolio-box">
+                            <img src="img/portfolio/4.jpg"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Time Series Analysis
+                                    </div>
+                                    <div class="project-name">
+                                        Time Series Analysis (ARIMA and RNN)
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">Time Series Analysis</h3></br>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
+                    <div style="width :95%">
+                        <a href="https://github.com/kshitijyad/IMDB_Tensor_Flow/blob/master/IMDB_Movie_Rating.ipynb" class="portfolio-box">
+                            <img src="img/portfolio/6.jpg"  class="img-responsive" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-category text-faded">
+                                        Tensor Flow
+                                    </div>
+                                    <div class="project-name">
+                                        IMDB Rating Prediction
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <h3 style="text-align: center">Tensor Flow</h3></br>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
